[package]
name = "cubetools"
version = "0.1.0"
authors = ["George Madrid <gmadrid@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
argh = "0.1.4"
once_cell = "1.7.2"

[[bin]]
name = "ollimage"

[[bin]]
name = "pllimage"
